--- a/index.html
+++ b/index.html
@@ -38,5 +38,61 @@
             </div>
         </div>
     </section>
+
+    <section class="container we__offer">
+        <div class="card">
+            <img src="images/item1.png" alt="">
+            <h2>Order Online</h2>
+            <p>Stay home and order to your doorstep</p>
+        </div>
+        <div class="card">
+            <img src="images/item2.png" alt="">
+            <h2>Dining</h2>
+            <p>View the city's favourite dining venues</p>
+        </div>
+        <div class="card">
+            <img src="images/item3.png" alt="">
+            <h2>Nightlife and Clubs</h2>
+            <p>Explore the city's top nightlife outlets</p>
+        </div>
+    </section>
+
+    <section class="container collections">
+        <h1>Collections</h1>
+        <div class="sub__heading_container">
+            <span>Explore curated lists of top restarants, cafes, pubs, and bars in Kolkata, based on trends</span>
+            <span>All collections in Kolkata</span>
+        </div>
+        <div class="collections_card_container">
+            <div class="card card1">
+                <div class="overlay"></div>
+                <div class="content">
+                    <h4>Newly Opened</h4>
+                    <span>11 Places</span>
+                </div>
+            </div>
+            <div class="card card2">
+                <div class="overlay"></div>
+                <div class="content">
+                    <h4>Trending This Week</h4>
+                    <span>30 Places</span>
+                </div>
+            </div>
+            <div class="card card3">
+                <div class="overlay"></div>
+                <div class="content">
+                    <h4>Best of Kolkata</h4>
+                    <span>61 Places</span>
+                </div>
+            </div>
+            <div class="card card4">
+                <div class="overlay"></div>
+                <div class="content">
+                    <h4>Brilliant Biryani</h4>
+                    <span>30 Places</span>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
