--- a/index.html
+++ b/index.html
@@ -94,5 +94,107 @@
             </div>
         </div>
     </section>
+
+    <section class="container get__the_app">
+        <div class="semicontainer">
+            <div class="left">
+                <img src="images/mobileBanner.png" alt="banner"/>
+            </div>
+            <div class="right">
+                <h1>Get The Zomato App</h1>
+
+                <p>
+                    We will send you a link, open it on your phone to download the app
+                </p>
+
+                <div class="radio__buttons_container">
+                    <div>
+                        <input type="radio" name="download_app" id="email"/>
+                        <label for="email" style="font-size: 14px;">Email</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="phone" name="download_app"/>
+                        <label for="phone"  style="font-size: 14px;">Phone</label>
+                    </div>
+                </div>
+
+                <div class="input_container">
+                    <input type="text" placeholder="Email"/>
+                    <button>Share App Link</button>
+                </div>
+
+                <div class="download__app_container">
+                    <h5>Download App From</h5>
+                    <div>
+                        <img src="images/playStore.png" alt="playstore image">
+                        <img src="images/appleStore.png" alt="applestore image">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="footer_section1">
+            <img src="images/logo.png" alt="zomtao logo"/>
+            <div class="section1__buttoncontainer">
+                <button><img src="https://flagcdn.com/w40/in.png" alt="India" style="width: 17px;"/>India</button>
+                <button><i class="fa fa-globe" aria-hidden="true"></i>English</button>
+            </div>
+        </div>
+        <div class="navigation_container">
+            <div class="link__container">
+                <h5>ABOUT ZOMATO</h5>
+                <a class="footer__link" href="#">Who We Are</a>
+                <a class="footer__link" href="#">Blog</a>
+                <a class="footer__link" href="#">Work With Us</a>
+                <a class="footer__link" href="#">Investor Relations</a>
+                <a class="footer__link" href="#">Report Fraud</a>
+                <a class="footer__link" href="#">Contact Us</a>
+            </div>
+
+            <div class="link__container">
+                <h5>ZOMAVERSE</h5>
+                <a class="footer__link" href="#">Zomato</a>
+                <a class="footer__link" href="#">Feeding India</a>
+                <a class="footer__link" href="#">Hyperpure</a>
+                <a class="footer__link" href="#">Zomaland</a>
+            </div>
+            
+            <div class="link__container">
+                <h5>FOR RESTAURANTS</h5>
+                <a class="footer__link" href="#">Partner With Us</a>
+                <a class="footer__link" href="#">Apps For You</a>
+                <br/>
+                <h5>FOR ENTERPRISES</h5>
+                <a class="footer__link" href="#">Zomato For Work</a>
+            </div>
+
+            <div class="link__container">
+                <h5>LEARN MORE</h5>
+                <a class="footer__link" href="#">Privacy</a>
+                <a class="footer__link" href="#">Security</a>
+                <a class="footer__link" href="#">Terms</a>
+                <a class="footer__link" href="#">Sitemap</a>
+            </div>
+        
+            <div class="link__container">
+                <h5>SOCIAL LINKS</h5>
+                <div class="social__links_container">
+                    <button><i class="fa-brands fa-linkedin-in"></i></button>
+                    <button><i class="fa-brands fa-instagram"></i></button>
+                    <button><i class="fa-brands fa-twitter"></i></button>
+                    <button><i class="fa-brands fa-youtube"></i></button>
+                    <button><i class="fa-brands fa-facebook-f"></i></button>
+                </div>
+                <br/>
+                <img src="images/appleStore.png" alt="applestore image" class="footer__store_logos"/>
+                <img src="images/playStore.png" alt="playstore image" class="footer__store_logos"/>
+            </div>
+        </div>
+        <p class="disclaimer">
+            By continuing past this page, you agree to our Terms of Service, Cookie Policy, Privacy Policy and Content Policies. All trademarks are properties of their respective owners. 2008-2022 © Zomato™ Ltd. All rights reserved.
+        </p>
+    </footer>
 </body>
 </html>
